--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/index.css" />
     <link rel="stylesheet" href="styles/shared.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>Abdullah Sabırer</title>
   </head>
   <body>
@@ -19,18 +20,28 @@
         </div>
         <nav class="nav-content">
           <ul class="nav-links">
-            <li><a href="#">Ana Sayfa</a></li>
-            <li><a href="#">Hakkımda</a></li>
-            <li><a href="#">İletişim</a></li>
+            <li><button class="about">About Me</button></li>
+            <li><button class="contact">Contact</button></li>
           </ul>
         </nav>
       </div>
     </header>
     <section>
       <div class="container">
-        <div></div>
+        <div class="foto-div">
+          <img class="foto" src="/images/resim.jpg" alt="">
+        </div>
+        <div class="title-p">
+          <h1 class="title">Abdullah Sabırer!</h1>
+          <p class="p">
+            I am a junior developer working in the field of web development. <br>
+            I am currently undergoing training in HTML, CSS, and JavaScript to enhance my skills and expertise.
+          </p>
+        </div>
+        <button class="contact-me">Contact Me</button>
         </div>
       </div>
     </section>
+    <script src="app.js"></script>
   </body>
 </html>
